@@ -116,6 +116,7 @@
     <Compile Include="Facilities\TypedFactory\Components\ServiceRedirect.cs" />
     <Compile Include="Facilities\TypedFactory\Delegates\GenericUsesFuncOfGenerics.cs" />
     <Compile Include="Facilities\TypedFactory\Factories\IFactoryWithParametersExtended.cs" />
+    <Compile Include="Facilities\TypedFactory\Factories\IFactoryWithParametersTwoBases.cs" />
     <Compile Include="Facilities\TypedFactory\TypedFactoryDependenciesTestCase.cs" />
     <Compile Include="InternalsVisibleTo.cs" />
     <Compile Include="LifecycledComponentsReleasePolicyTestCase.cs" />
